--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
+[build]
+    command = "npm run build"
+
 [[redirects]]
     from = "/*"
     to = "/index.html"
     status = 200
-[[build]]
-    command = "npm run build"
