--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel index.html",
+    "dev": "parcel index.html --no-cache",
+    "serve": "parcel build index.html && node server.js",
     "build": "parcel build index.html"
   },
   "devDependencies": {
-    "parcel": "^2.8.3"
+    "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "handlebars": "^4.7.7",
+    "parcel": "^2.8.3",
+    "parcel-reporter-static-files-copy": "^1.5.0",
+    "parcel-transformer-hbs": "^1.0.4",
+    "postcss": "^8.4.21",
+    "postcss-nested": "^6.0.1",
+    "postcss-preset-env": "^8.0.1"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
