--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "parcel index.html --no-cache",
-    "serve": "parcel build index.html && node server.js",
+    "start": "parcel build index.html && node server.js",
     "build": "parcel build index.html"
   },
   "devDependencies": {
