--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
   "scripts": {
     "dev": "parcel index.html --no-cache --open",
-    "start": "parcel build index.html && node server.js",
-    "build": "parcel build index.html"
+    "start": "tsc && parcel build index.html && node server.js",
+    "build": "npm run lint && tsc && parcel build index.html",
+    "lint": "eslint \"**/*.ts\" && stylelint \"**/*.css\""
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
+    "@parcel/transformer-sass": "^2.8.3",
+    "@typescript-eslint/eslint-plugin": "5.55.0",
+    "@typescript-eslint/parser": "5.55.0",
+    "eslint": "8.36.0",
+    "eslint-config-airbnb-base": "15.0.0",
     "handlebars": "4.7.7",
     "parcel": "2.8.3",
     "parcel-reporter-static-files-copy": "1.5.0",
     "parcel-transformer-hbs": "1.0.4",
     "postcss": "8.4.21",
     "postcss-nested": "6.0.1",
-    "postcss-preset-env": "8.0.1"
+    "postcss-preset-env": "8.0.1",
+    "stylelint": "^15.3.0",
+    "stylelint-config-standard": "^31.0.0",
+    "typescript": "5.0.2"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "uuid": "^9.0.0"
   }
 }
