--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint": "8.36.0",
     "eslint-config-airbnb-base": "15.0.0",
     "handlebars": "4.7.7",
-    "parcel-bundler": "1.12.5",
+    "parcel": "2.8.3",
     "parcel-reporter-static-files-copy": "1.5.0",
     "parcel-transformer-hbs": "1.0.4",
     "postcss": "8.4.21",
