--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,13 @@
     "import/extensions": "off",
     "import/no-unresolved": "off",
     "max-len": ["warn", 150],
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "class-methods-use-this": "off",
+    "no-underscore-dangle": "off",
+    "no-restricted-globals": "off",
+    "no-unused-vars": "off",
+    "no-shadow": "off",
+    "no-use-before-define": "off",
+    "no-global-assign": "off"
   }
 }
