--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "scripts": {
-    "dev": "parcel index.html --no-cache",
-    "start": "tsc && parcel build index.html && node server.js",
+    "dev": "parcel index.html --no-cache --open",
+    "start": "npm run build && node server.js",
     "build": "npm run lint && tsc && parcel build index.html",
     "lint": "eslint \"**/*.ts\" && stylelint \"**/*.css\""
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
-    "@parcel/transformer-sass": "^2.8.3",
+    "@parcel/transformer-sass": "2.8.3",
+    "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
     "eslint": "8.36.0",
@@ -20,11 +21,11 @@
     "postcss-nested": "6.0.1",
     "postcss-preset-env": "8.0.1",
     "stylelint": "^15.3.0",
-    "stylelint-config-standard": "^31.0.0",
+    "stylelint-config-standard": "31.0.0",
     "typescript": "5.0.2"
   },
   "dependencies": {
     "express": "4.18.2",
-    "uuid": "^9.0.0"
+    "uuid": "9.0.0"
   }
 }
