--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,11 @@
     "outDir": "dist",
     "target": "es2017",
     "declaration": false,
-    //"module": "commonjs",
-    //"esModuleInterop": true,
     "moduleResolution": "node",
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "sourceMap": true,
-    "noImplicitAny": false,
-    "noUnusedLocals": false,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
     "noUnusedParameters": true,
   },
   "include": [
