--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "parcel": "2.8.3",
     "parcel-reporter-static-files-copy": "1.5.0",
     "parcel-transformer-hbs": "1.0.4",
+    "path-browserify": "^1.0.1",
     "postcss": "8.4.21",
     "postcss-nested": "6.0.1",
     "postcss-preset-env": "8.0.1",
+    "process": "^0.11.10",
     "stylelint": "^15.3.0",
     "stylelint-config-standard": "31.0.0",
     "typescript": "5.0.2"
