--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,11 +11,17 @@
     //"max-params": [1, 1],
     "linebreak-style": "off",
     "no-console": "off",
+    "no-undef" : "off",
+    "no-useless-constructor": "off",
+    "prefer-promise-reject-errors": "off",
     "indent": ["error", 4],
     "import/no-extraneous-dependencies": "off",
     "import/extensions": "off",
     "import/no-unresolved": "off",
     "max-len": ["warn", 150],
+    "max-classes-per-file": "off",
+    "object-curly-newline": "off",
+    "no-constructor-return": "off",
     "no-param-reassign": "off",
     "class-methods-use-this": "off",
     "no-underscore-dangle": "off",
