--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "start": "npm run build && node server.js",
     "build": "npm run lint && tsc && parcel build index.html",
     "lint": "eslint \"**/*.ts\" && stylelint \"**/*.css\"",
-    "test": "mocha -r ts-node/register src/**/*spec.ts"
+    "test": "mocha -r ts-node/register -r jsdom-global/register src/**/*spec.ts",
+    "test1": "mocha"
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
@@ -18,6 +19,7 @@
     "eslint": "8.36.0",
     "eslint-config-airbnb-base": "15.0.0",
     "handlebars": "4.7.7",
+    "jsdom-global": "^3.0.2",
     "mocha": "^10.2.0",
     "parcel": "2.8.3",
     "parcel-reporter-static-files-copy": "1.5.0",
