--- a/package.json
+++ b/package.json
@@ -3,34 +3,38 @@
     "dev": "parcel index.html --no-cache --open",
     "start": "npm run build && node server.js",
     "build": "npm run lint && tsc && parcel build index.html",
-    "lint": "eslint \"**/*.ts\" && stylelint \"**/*.css\"",
-    "test": "mocha -r ts-node/register -r jsdom-global/register src/**/*spec.ts",
-    "test1": "mocha"
+    "lint": "npm run lint:es && npm run lint:style",
+    "lint:es": "eslint \"**/*.ts\"",
+    "lint:style": "stylelint \"**/*.css\"",
+    "test1": "mocha -r ts-node/register -r jsdom-global/register src/**/*spec.ts",
+    "test": "mocha"
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
     "@parcel/transformer-sass": "2.8.3",
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
+    "@types/chai": "4.3.4",
+    "@types/jsdom": "21.1.1",
+    "@types/mocha": "10.0.1",
     "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
-    "chai": "^4.3.7",
+    "chai": "4.3.7",
     "eslint": "8.36.0",
     "eslint-config-airbnb-base": "15.0.0",
     "handlebars": "4.7.7",
-    "jsdom-global": "^3.0.2",
-    "mocha": "^10.2.0",
+    "jsdom": "21.1.1",
+    "jsdom-global": "3.0.2",
+    "mocha": "10.2.0",
     "parcel": "2.8.3",
     "parcel-reporter-static-files-copy": "1.5.0",
     "parcel-transformer-hbs": "1.0.4",
-    "path-browserify": "^1.0.1",
+    "path-browserify": "1.0.1",
     "postcss": "8.4.21",
     "postcss-nested": "6.0.1",
     "postcss-preset-env": "8.0.1",
-    "stylelint": "^15.3.0",
+    "stylelint": "15.3.0",
     "stylelint-config-standard": "31.0.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "10.9.1",
     "typescript": "5.0.2"
   },
   "dependencies": {
