--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
     "chai": "4.3.7",
+    "css-loader": "^6.7.3",
     "eslint": "8.36.0",
     "eslint-config-airbnb-base": "15.0.0",
     "handlebars": "4.7.7",
+    "handlebars-loader": "^1.7.3",
+    "html-webpack-plugin": "^5.5.1",
     "jsdom": "21.1.1",
     "jsdom-global": "3.0.2",
     "mocha": "10.2.0",
@@ -30,12 +33,18 @@
     "parcel-transformer-hbs": "1.0.4",
     "path-browserify": "1.0.1",
     "postcss": "8.4.21",
+    "postcss-loader": "^7.2.4",
     "postcss-nested": "6.0.1",
     "postcss-preset-env": "8.0.1",
+    "style-loader": "^3.3.2",
     "stylelint": "15.3.0",
     "stylelint-config-standard": "31.0.0",
+    "ts-loader": "^9.4.2",
     "ts-node": "10.9.1",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "webpack": "^5.80.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
     "express": "4.18.2",
