--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint:es": "eslint \"**/*.ts\"",
     "lint:style": "stylelint \"**/*.css\"",
     "test1": "mocha -r ts-node/register -r jsdom-global/register src/**/*spec.ts",
-    "test": "mocha"
+    "test": "mocha",
+    "wp-dev": "webpack serve --config webpack/webpack.dev.js",
+    "wp-build": "webpack --config webpack/webpack.dev.js"
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
@@ -19,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
     "chai": "4.3.7",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "eslint": "8.36.0",
     "eslint-config-airbnb-base": "15.0.0",
@@ -44,7 +47,8 @@
     "typescript": "5.0.2",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-server": "^4.13.3",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "express": "4.18.2",
