--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint:style": "stylelint \"**/*.css\"",
     "test1": "mocha -r ts-node/register -r jsdom-global/register src/**/*spec.ts",
     "test": "mocha",
-    "wp-dev": "webpack serve --config webpack/webpack.dev.js",
-    "wp-build": "webpack --config webpack/webpack.dev.js"
+    "wp-dev": "webpack serve --config webpack.dev.js",
+    "wp-build": "webpack --config webpack/webpack.prod.js"
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
