--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "scripts": {
-    "dev": "parcel index.html --no-cache --open",
+    "dev": "webpack serve --config webpack/webpack.dev.js",
+    "build": "npm run lint && tsc && webpack --config webpack/webpack.prod.js",
     "start": "npm run build && node server.js",
-    "build": "npm run lint && tsc && parcel build index.html",
     "lint": "npm run lint:es && npm run lint:style",
-    "lint:es": "eslint \"**/*.ts\"",
+    "lint:es": "eslint --ext .js,.ts .",
     "lint:style": "stylelint \"**/*.css\"",
-    "test1": "mocha -r ts-node/register -r jsdom-global/register src/**/*spec.ts",
-    "test": "mocha",
-    "wp-dev": "webpack serve --config webpack.dev.js",
-    "wp-build": "webpack --config webpack/webpack.prod.js"
+    "test": "mocha"
   },
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "1.0.9",
-    "@parcel/transformer-sass": "2.8.3",
     "@types/chai": "4.3.4",
     "@types/jsdom": "21.1.1",
     "@types/mocha": "10.0.1",
@@ -21,34 +16,34 @@
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
     "chai": "4.3.7",
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "11.0.0",
     "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "5.0.0",
     "eslint": "8.36.0",
     "eslint-config-airbnb-base": "15.0.0",
     "handlebars": "4.7.7",
-    "handlebars-loader": "^1.7.3",
+    "handlebars-loader": "1.7.3",
     "html-webpack-plugin": "^5.5.1",
     "jsdom": "21.1.1",
     "jsdom-global": "3.0.2",
+    "mini-css-extract-plugin": "2.7.5",
     "mocha": "10.2.0",
-    "parcel": "2.8.3",
-    "parcel-reporter-static-files-copy": "1.5.0",
-    "parcel-transformer-hbs": "1.0.4",
     "path-browserify": "1.0.1",
     "postcss": "8.4.21",
-    "postcss-loader": "^7.2.4",
+    "postcss-loader": "7.2.4",
     "postcss-nested": "6.0.1",
     "postcss-preset-env": "8.0.1",
-    "style-loader": "^3.3.2",
+    "style-loader": "3.3.2",
     "stylelint": "15.3.0",
     "stylelint-config-standard": "31.0.0",
-    "ts-loader": "^9.4.2",
+    "terser-webpack-plugin": "5.3.7",
+    "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
     "typescript": "5.0.2",
-    "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.3",
-    "webpack-merge": "^5.8.0"
+    "webpack": "5.80.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.13.3",
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
     "express": "4.18.2",
