--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "lint": "npm run lint:es && npm run lint:style",
     "lint:es": "eslint --ext .js,.ts .",
     "lint:style": "stylelint \"**/*.css\"",
-    "test": "mocha"
+    "test": "mocha",
+    "prepare": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": ""
+    }
   },
   "devDependencies": {
     "@types/chai": "4.3.4",
@@ -17,15 +24,17 @@
     "@typescript-eslint/parser": "5.55.0",
     "chai": "4.3.7",
     "copy-webpack-plugin": "11.0.0",
-    "css-loader": "^6.7.3",
+    "css-loader": "6.7.3",
     "css-minimizer-webpack-plugin": "5.0.0",
     "eslint": "8.36.0",
     "eslint-config-airbnb-base": "15.0.0",
     "handlebars": "4.7.7",
     "handlebars-loader": "1.7.3",
-    "html-webpack-plugin": "^5.5.1",
+    "html-webpack-plugin": "5.5.1",
+    "husky": "8.0.0",
     "jsdom": "21.1.1",
     "jsdom-global": "3.0.2",
+    "lint-staged": "^13.2.1",
     "mini-css-extract-plugin": "2.7.5",
     "mocha": "10.2.0",
     "path-browserify": "1.0.1",
