--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/chai": "4.3.4",
     "@types/jsdom": "21.1.1",
     "@types/mocha": "10.0.1",
+    "@types/sinon": "^10.0.14",
     "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
@@ -42,6 +43,7 @@
     "postcss-loader": "7.2.4",
     "postcss-nested": "6.0.1",
     "postcss-preset-env": "8.0.1",
+    "sinon": "^15.0.4",
     "style-loader": "3.3.2",
     "stylelint": "15.3.0",
     "stylelint-config-standard": "31.0.0",
