--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "es2017",
+    "target": "es2018",
     "declaration": false,
     "moduleResolution": "node",
     "strictNullChecks": true,
     "sourceMap": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
   },
   "ts-node": {
     "files": true
   },
-  "files": [
-    "src/types/index.d.ts"
-  ],
   "include": [
     "src/**/*"
   ],
