--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "module": "CommonJS"
+    "module": "CommonJS",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true
   },
   "ts-node": {
     "files": true
