--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "lint": "npm run lint:es && npm run lint:style",
     "lint:es": "eslint --ext .js,.ts .",
     "lint:style": "stylelint \"**/*.css\"",
-    "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.spec.ts'",
-    "test1": "mocha",
+    "test": "mocha",
     "prepare": "husky install"
   },
   "devDependencies": {
