--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,5 @@
 {
   "extension": ["ts"],
   "spec": "src/**/*.spec.ts",
-  "require": ["ts-node/register", "jsdom-global/register", "./mochaSetup.js"]
+  "require": ["ts-node/register", "./mochaSetup.js"]
 }
