--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/chai": "4.3.4",
     "@types/jsdom": "21.1.1",
     "@types/mocha": "10.0.1",
-    "@types/sinon": "^10.0.14",
+    "@types/sinon": "10.0.14",
     "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
@@ -29,7 +29,7 @@
     "husky": "8.0.0",
     "jsdom": "21.1.1",
     "jsdom-global": "3.0.2",
-    "lint-staged": "^13.2.1",
+    "lint-staged": "13.2.1",
     "mini-css-extract-plugin": "2.7.5",
     "mocha": "10.2.0",
     "path-browserify": "1.0.1",
@@ -37,7 +37,7 @@
     "postcss-loader": "7.2.4",
     "postcss-nested": "6.0.1",
     "postcss-preset-env": "8.0.1",
-    "sinon": "^15.0.4",
+    "sinon": "15.0.4",
     "style-loader": "3.3.2",
     "stylelint": "15.3.0",
     "stylelint-config-standard": "31.0.0",
